Changelog
=========

Version 1.2
-----------

* Merge a slightly stripped down version of the Jarn Plone hosting template.
  This provides a convenient way to create a buildout for all Plone 2.5 and
  3.0 versions with ZEO and optional Varnish based caching.
  [wichert]
