@@ -265,3 +265,12 @@ class Archetype(Plone):
         'title', 'The title of the project',
         default='Plone Example'))      
 
+class Recipe(NestedNamespace):
+    """A template for buidldout recipes"""
+    _template_dir = 'templates/recipe'
+    summary = "A recipe project for zc.buildout"
+    required_templates = []
+    use_cheetah = True
+    vars = copy.deepcopy(NestedNamespace.vars)
+    get_var(vars, 'namespace_package2').default = 'recipe'
+
